# evcs

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
evcs/: app.py  database.py  models.py  schemas.py  service.py  settings.py  worker.py
evcs/charging/: models.py  router.py  schemas.py  service.py  tasks.py  validators.py
migrations/: env.py
migrations/versions/: b3b762fe1244_add_tables.py
tests/: conftest.py  test_app.py  test_service.py  test_worker.py
